--- a/web/src/mat-theme.scss
+++ b/web/src/mat-theme.scss
@@ -14,11 +14,21 @@ html {
 }
 
 body {
-  color-scheme: light;
+  color-scheme: light dark;
 
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
 
   margin: 0;
+}
+
+:root {
+  @include mat.button-overrides((
+    filled-container-shape: var(--mat-sys-corner-small),
+    outlined-container-shape: var(--mat-sys-corner-small),
+    protected-container-shape: var(--mat-sys-corner-small),
+    text-container-shape: var(--mat-sys-corner-small),
+    tonal-container-shape: var(--mat-sys-corner-small)
+  ))
 }
